fixes logo stretching

--- a/src/less/custom.less
+++ b/src/less/custom.less
@@ -10,7 +10,7 @@
       padding-right: 0;
       height: 145px;
       img {
-        height: 90px;
+        max-height: 90px;
         max-width: 160px;
         float: left;
       }
